use images for inline-filter drop arrows. Fix alignment of the inline-filter grid so non-filterable facets align better with their values

--- a/dark.scss
+++ b/dark.scss
@@ -1,5 +1,7 @@
 $colorVariant:dark;
 
+$dottedBorder: rgba(255,255,255,0.2);
+
 //CALL UNIVERSALS
 @import 'universals';
 
@@ -95,9 +97,10 @@ $colorVariant:dark;
         min-width:80px;
         vertical-align:top;
         text-align: right;
+        padding:$mainGutter/5 0 $mainGutter/4;
         }
-      .inline-filter-button {display: inline-block; padding-bottom:$mainGutter/4;}
-      b{font-weight: 700;}
+      .inline-filter-button {display: inline-block; margin-top:-$mainGutter/5; line-height:inherit;}
+      b{font-weight: 700; display:inline-block; vertical-align:top; margin-top:1px; line-height:1;}
       span.facet-values{
         font: 400 13px/1 Georgia, serif;
         display:table-cell;
@@ -135,7 +138,7 @@ $colorVariant:dark;
     font-size:12px;
     width:50%;
     &:nth-child(even){
-      border-left:1px dotted $lighterOpacity;
+      border-left:1px dotted $dottedBorder;
       margin-left:-1px;
       }
     h2 {
@@ -228,21 +231,15 @@ $colorVariant:dark;
       font-weight:700;
       line-height:1;
       margin: 0;
-      padding: $mainGutter/5 $mainGutter/1.11 $mainGutter/5 $mainGutter/5;
-      margin-left: -$mainGutter/5;
+      padding: $mainGutter/5;
       position:relative;
       i{
-        height: 0;
-        width: 0;
-        border-width:5px;
-        border-color:$lightOpacity transparent transparent;
-        border-style:solid;
+        background: url("angle-dark-sm.png") center center no-repeat;
+        display: inline-block;
+        height: 7px;
+        margin-left: 3px;
         pointer-events: none;
-        position:absolute;
-        top:50%;
-        right:4px;
-        margin-top:-2px;
-        opacity:0.35;
+        width: 7px;
         }
       &:hover{
         border: 1px solid $lighterOpacity;
